--- a/css/contacto.css
+++ b/css/contacto.css
@@ -312,5 +312,173 @@ h4{
         justify-content: center;
         padding-bottom: 2em;
     }    
+}
 
+/*Form*/
+
+ul {
+    list-style: none;
+  }
+  
+  input {
+    overflow: hidden;
+  }
+  
+  .section-title {
+    align-items: center;
+    color: #595357;
+    font-size: 30px;
+    font-weight: 600;
+    margin: 0 0 15px;
+  }
+  
+  
+  .contact-sec {
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+  }
+  
+  .contact-sec .contact-ul li,
+  .contact-ul b {
+    color: #595357;
+    font-size: 20px;
+    margin: 15px ;
+  }
+  
+  .contact-sec .contact-ul i {
+    font-size: 18px;
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 50%;
+  }
+  .contact-detail a {
+    color: #595357;
+    text-decoration: none;
+  }
+  
+  .contact-detail span {
+    width: 400px;
+    display: flex;
+    justify-content: center;
+  }
+  .contact-detail span a {
+    font-size: 20px;
+    padding: 6px 12px;
+    color: #595357;
+    border-radius: 50%;
+    margin: 0px 5px;
+  }
+  
+  form.contFrm {
+    max-width: 396px;
+    margin: auto;
+  }
+  
+  .inptFld {
+    width: 100%;
+    height: 50px;
+    border: 0;
+    margin: 0 0 10px;
+    border-radius: 25px;
+    padding: 0 20px;
+    font-size: 16px;
+    color: #595357;
+  }
+  
+  .inptFld:focus {
+    outline-offset: -4px;
+    outline: 1px solid #A6AB98;
+  }
+  
+  .contFrm textarea {
+    height: 75px;
+    padding-top: 5px;
+  }
+  .submit{
+    width: 300px;
+    padding-left: 85px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .inptBtn {
+    height: 50px;
+    border: 0;
+    background: #595357;
+    font-size: 14px;
+    color: #C9E197;
+    align-items: center;
+    margin-right: 50%;
+    letter-spacing: 1px;
+    border-radius: 25px;
+    cursor: pointer;
+    width: 100%;
+    max-width: 200px;
+  }
+  
+  /* Responcive css Start */
+  
+  @media (max-width: 991px) {
+    .sec-pad {
+      padding: 20px 0 0px;
+    }
+  
+    .contact-sec .contact-ul li,
+    .contact-ul b {
+      font-size: 18px;
+    }
+  
+    .contact-sec .contact-ul i {
+      font-size: 14px;
+      padding: 6px;
+      margin-right: 6px;
+    }
+  
+    .inptFld {
+      height: 40px;
+      margin: 0 0 10px;
+      padding: 0 14px;
+      font-size: 14px;
+    }
+  }
+  
+  @media (max-width: 767px) {
+    .contact-detail span {
+      width: auto;
+    }
+    .contact-detail span a {
+      font-size: 18px;
+      padding: 5px 10px;
+      color: #000;
+      border-radius: 50%;
+      margin: 0px 5px 20px;
+    }
+  }
+  
+  @media (max-width: 575px) {
+    .section-title {
+      font-size: 26px;
+      font-weight: 500;
+    }
+    .contact-sec {
+      border-radius: 10% 10% 0% 0% / 5% 5% 0% 0%;
+    }
+  
+    .contact-sec .contact-ul i {
+      border: none;
+    }
+    .inptFld {
+      height: 36px;
+      margin: 0 0 8px;
+      padding: 0 14px;
+      font-size: 14px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .contact-sec .contact-ul li,
+    .contact-ul b {
+      font-size: 16px;
+    }
 }
