--- a/css/biblioteca.css
+++ b/css/biblioteca.css
@@ -11,7 +11,6 @@ html, body {
     width: 100vw;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
 }
 
 body{
@@ -21,9 +20,11 @@ body{
     background-image: url(../images/bgmap.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     /*background-image: linear-gradient(to right top, #c9e197, #c3d797, #bccc98, #b6c298, #afb898, #abab90, #a49e89, #9b9283, #8f8078, #7f706e, #6c6163, #595357);*/
     /*background-image: linear-gradient(to left top, #C9E197, #C3d797, #BCCC98, #B6C298, #AFB898, #ABAB90, #A49E89, #9B9283, #8F8078, #7F706E, #6C6163, #595357); */
     font-family: 'Monserrat',sans-serif, Arial, Helvetica, sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #595357;
 }
 
 
@@ -32,6 +33,7 @@ header{
     flex-direction: row;
     justify-content: space-between;
     padding-top: 10px;
+    flex-wrap: wrap;
 }
 
 .logo{
@@ -127,6 +129,14 @@ a:hover:after{
 
 @media (max-width: 768px) {
 
+    header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 10px;
+    flex-wrap: wrap;
+    }
+
     body{
         margin-top: 0em;
         background-image: url(../images/bgmap.png);
@@ -213,7 +223,7 @@ a:hover:after{
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(0,0,0,0.7);
+    background-color: #595357;
     z-index: 999;
 }
 
@@ -225,92 +235,166 @@ a:hover:after{
     height: 100vh;
 }
 
-/*title styles*/
+/*Search bar*/
+.search-bar input,
+.search-btn, 
+.search-btn:before, 
+.search-btn:after {
+	transition: all 0.25s ease-out;
+}
+.search-bar input,
+.search-btn {
+	width: 3em;
+	height: 3em;
+}
+.search-bar input:invalid:not(:focus),
+.search-btn {
+	cursor: pointer;
+}
+.search-bar,
+.search-bar input:focus,
+.search-bar input:valid  {
+	width: 100%;
+}
+.search-bar input:focus,
+.search-bar input:not(:focus) + .search-btn:focus {
+	outline: transparent;
+}
+.search-bar {
+	margin: 10px;
+	justify-content: flex-start;
+	max-width: 95%;
+    padding-top: 0;
+}
+.search-bar input {
+	background: transparent;
+	border-radius: 1.5em;
+	box-shadow: 0 0 0 0.4em #595357 inset;
+	padding: 0.75em;
+	transform: translate(0.5em,0.5em) scale(0.5);
+	transform-origin: 100% 0;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
+.search-bar input::-webkit-search-decoration {
+	-webkit-appearance: none;
+}
+.search-bar input:focus,
+.search-bar input:valid {
+	background: #C9E197;
+	border-radius: 25px;
+	box-shadow: 0 0 0 0.1em #A4AC95 inset;
+	transform: scale(1);
+}
+.search-btn {
+	background: #595357;
+	border-radius: 50px / 50px;
+	padding: 0.75em;
+	position: relative;
+	transform: translate(0.25em,0.25em) rotate(45deg) scale(0.25,0.125);
+	transform-origin: 0 50%;
+}
+.search-btn:before, 
+.search-btn:after {
+	content: "";
+	display: block;
+	opacity: 0;
+	position: absolute;
+}
+.search-btn:before {
+	border-radius: 50px;
+	box-shadow: 0 0 0 0.2em #C9E197 inset;
+	top: 0.75em;
+	left: 0.75em;
+	width: 1.2em;
+	height: 1.2em;
+}
+.search-btn:after {
+	background: #C9E197;
+	border-radius: 25px;
+	top: 51%;
+	left: 51%;
+	width: 0.75em;
+	height: 0.25em;
+	transform: translate(0.2em,0) rotate(45deg);
+	transform-origin: 0 50%;
+}
+.search-btn span {
+	display: inline-block;
+	overflow: hidden;
+	width: 1px;
+	height: 1px;
+}
 
+/* Active state */
+.search-bar input:focus + .search-btn,
+.search-bar input:valid + .search-btn {
+	background: #595357;
+	border-radius: 50px;
+	transform: scale(1);
+}
+.search-bar input:focus + .search-btn:before, 
+.search-bar input:focus + .search-btn:after,
+.search-bar input:valid + .search-btn:before, 
+.search-bar input:valid + .search-btn:after {
+	opacity: 1;
+}
+.search-bar input:focus + .search-btn:hover,
+.search-bar input:valid + .search-btn:hover,
+.search-bar input:valid:not(:focus) + .search-btn:focus {
+	background: #595357;
+}
+.search-bar input:focus + .search-btn:active,
+.search-bar input:valid + .search-btn:active {
+	transform: translateY(1px);
+}
 
-.title{
-    height: 100%;
-    width: 100%;
+/*Authors*/
+
+.authors{
     display: flex;
     flex-direction: column;
-    justify-content:space-evenly;
-    color: #595357;
-}
-
-h1{
+    justify-content: space-around;
     width: 100%;
-    font-size: 9em;
-    font-weight: 40;
-    display: flex;
-    justify-content: center;
 }
 
-h4{
+.template{
+    display: flex;
+    flex-direction: row;
+    justify-content:start;
+    padding: 10px;
     width: 100%;
-    font-size: 3em;
-    font-weight: 10;
+    margin: 15px;
+}
+
+.data{
+    margin-left: 20px;
+    widows: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
-/*Responsive title*/
-@media (max-width: 820px){
-
-    .title{
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content:space-evenly;
-        color: #595357;
-    }
-    
-    h1{
-        width: 100%;
-        font-size: 6em;
-        font-weight: 40;
-        display: flex;
-        justify-content: center;
-    }
-    
-    h4{
-        width: 100%;
-        font-size: 2.5em;
-        font-weight: 10;
-        display: flex;
-        justify-content: center;
-    }
-    
-
+h3{
+    font-weight: bolder; 
 }
 
-@media (min-width : 54px) and (max-width : 800px) {
+h3:hover{
+    color: #A4AC95;
+    text-decoration: underline;
+    cursor: pointer;
+}
 
-    .title{
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content:center;
-        color: #3E3A3D;
-    }
-    
-    h1{
-        width: 100%;
-        font-size: 2em;
-        font-weight: 600;
-        display: flex;
-        justify-content: center;
-        padding-bottom: 2em;
-    }
-    
-    h4{
-        width: 100%;
-        font-size: 1.5em;
-        font-weight: 300;
-        display: flex;
-        justify-content: center;
-        padding-bottom: 2em;
-    }    
+.auth-img{
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    cursor: pointer;
+}
 
+.p-links{
+    justify-content: space-between;
+    cursor: pointer;
 }
