--- a/css/contacto.css
+++ b/css/contacto.css
@@ -21,6 +21,7 @@ body{
     background-image: url(../images/bgmap.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     /*background-image: linear-gradient(to right top, #c9e197, #c3d797, #bccc98, #b6c298, #afb898, #abab90, #a49e89, #9b9283, #8f8078, #7f706e, #6c6163, #595357);*/
     /*background-image: linear-gradient(to left top, #C9E197, #C3d797, #BCCC98, #B6C298, #AFB898, #ABAB90, #A49E89, #9B9283, #8F8078, #7F706E, #6C6163, #595357); */
     font-family: 'Monserrat',sans-serif, Arial, Helvetica, sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -32,13 +33,14 @@ header{
     flex-direction: row;
     justify-content: space-between;
     padding-top: 10px;
+    flex-wrap: wrap;
 }
 
 .logo{
     display: flex;
     justify-content: center;
-    height: 70px;
-    width: 140px;
+    height: 60px;
+    width: 120px;
     padding-left: 80px;
 }
 
@@ -126,12 +128,17 @@ a:hover:after{
 /*Responsive navbar*/
 
 @media (max-width: 768px) {
-
+    
     body{
         margin-top: 0em;
         background-image: url(../images/bgmap.png);
         background-repeat: no-repeat;
         background-size: cover;
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
     }
 
     .navbar  {
@@ -255,7 +262,17 @@ h4{
 
 /*Responsive title*/
 @media (max-width: 820px){
-
+    body{
+      margin-top: 0em;
+      background-image: url(../images/bgmap.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+  }
     .title{
         height: 100%;
         width: 100%;
@@ -285,7 +302,17 @@ h4{
 }
 
 @media (min-width : 54px) and (max-width : 800px) {
-
+    body{
+      margin-top: 0em;
+      background-image: url(../images/bgmap.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+    }
     .title{
         height: 100%;
         width: 100%;
@@ -329,7 +356,6 @@ ul {
     color: #595357;
     font-size: 30px;
     font-weight: 600;
-    margin: 0 0 15px;
   }
   
   
@@ -397,7 +423,7 @@ ul {
   }
   .submit{
     width: 300px;
-    padding-left: 85px;
+    padding-left: 175px;
     display: flex;
     justify-content: center;
   }
@@ -417,7 +443,7 @@ ul {
     max-width: 200px;
   }
   
-  /* Responcive css Start */
+  /* Responsive css Start */
   
   @media (max-width: 991px) {
     .sec-pad {
@@ -450,7 +476,7 @@ ul {
     .contact-detail span a {
       font-size: 18px;
       padding: 5px 10px;
-      color: #000;
+      color: #595357;
       border-radius: 50%;
       margin: 0px 5px 20px;
     }
@@ -461,10 +487,7 @@ ul {
       font-size: 26px;
       font-weight: 500;
     }
-    .contact-sec {
-      border-radius: 10% 10% 0% 0% / 5% 5% 0% 0%;
-    }
-  
+
     .contact-sec .contact-ul i {
       border: none;
     }
@@ -477,6 +500,17 @@ ul {
   }
   
   @media (max-width: 480px) {
+    body{
+      margin-top: 0em;
+      background-image: url(../images/bgmap.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 100vh;
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+    }
     .contact-sec .contact-ul li,
     .contact-ul b {
       font-size: 16px;
