--- a/css/actividades.css
+++ b/css/actividades.css
@@ -11,7 +11,6 @@ html, body {
     width: 100vw;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
 }
 
 body{
@@ -32,6 +31,7 @@ header{
     flex-direction: row;
     justify-content: space-between;
     padding-top: 10px;
+    flex-wrap: wrap;
 }
 
 .logo{
