--- a/css/nostros-circle.css
+++ b/css/nostros-circle.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 
-html, body {
+body {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -17,13 +17,11 @@ body{
     min-height: 100vh;
     margin: 0;
     padding: 0;
-    /*background-image: url(../images/bgmap.png);
+    background-color: #c9e197;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;*/
     /*background-image: linear-gradient(to right top, #c9e197, #c3d797, #bccc98, #b6c298, #afb898, #abab90, #a49e89, #9b9283, #8f8078, #7f706e, #6c6163, #595357);*/
     /*background-image: linear-gradient(to left top, #C9E197, #C3d797, #BCCC98, #B6C298, #AFB898, #ABAB90, #A49E89, #9B9283, #8F8078, #7F706E, #6C6163, #595357); */
-    background-color: #C9E197;
     font-family: 'Monserrat',sans-serif, Arial, Helvetica, sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -33,14 +31,13 @@ header{
     flex-direction: row;
     justify-content: space-between;
     padding-top: 10px;
-    flex-wrap: wrap;
 }
 
 .logo{
     display: flex;
     justify-content: center;
-    height: 60px;
-    width: 120px;
+    height: 70px;
+    width: 140px;
     padding-left: 80px;
 }
 
@@ -48,20 +45,24 @@ header{
 
 .navbar{
    /* height: 100%;*/ 
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     color: #595357;
-    padding-right: 30px;
 }
 
 .navbar-links {
     height: 4em;
+    width: 80%;
 }
 
 .navbar-links ul {
     display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
     margin: 0;
     padding: 0;
 }
@@ -125,20 +126,17 @@ a:hover:after{
     border-radius: 10px;
 }
 
+
+
 /*Responsive navbar*/
 
 @media (max-width: 768px) {
-    
+
     body{
         margin-top: 0em;
         background-image: url(../images/bgmap.png);
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100vh;
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
     }
 
     .navbar  {
@@ -262,17 +260,7 @@ h4{
 
 /*Responsive title*/
 @media (max-width: 820px){
-    body{
-      margin-top: 0em;
-      background-image: url(../images/bgmap.png);
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: 100vh;
-      width: 100vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-  }
+
     .title{
         height: 100%;
         width: 100%;
@@ -302,17 +290,7 @@ h4{
 }
 
 @media (min-width : 54px) and (max-width : 800px) {
-    body{
-      margin-top: 0em;
-      background-image: url(../images/bgmap.png);
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: 100vh;
-      width: 100vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-    }
+
     .title{
         height: 100%;
         width: 100%;
@@ -339,180 +317,53 @@ h4{
         justify-content: center;
         padding-bottom: 2em;
     }    
+
 }
 
-/*Form*/
-
-ul {
-    list-style: none;
-  }
-  
-  input {
-    overflow: hidden;
-  }
-  
-  .section-title {
-    align-items: center;
+.bobo{
+    font-family: 'Monserrat',sans-serif, Arial, Helvetica, sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #595357;
-    font-size: 30px;
-    font-weight: 600;
-  }
-  
-  
-  .contact-sec {
-    flex-direction: column;
-    align-items: center;
+    font-weight: bold;
+    font-size: 1em;
+    margin: 4em 2em 4em 2em;
+    padding: 4em 2em 4em 2em;
     display: flex;
-  }
-  
-  .contact-sec .contact-ul li,
-  .contact-ul b {
-    color: #595357;
-    font-size: 20px;
-    margin: 15px ;
-  }
-  
-  .contact-sec .contact-ul i {
-    font-size: 18px;
-    padding: 10px;
-    margin-right: 10px;
-    border-radius: 50%;
-  }
-  .contact-detail a {
-    color: #595357;
-    text-decoration: none;
-  }
-  
-  .contact-detail span {
+    justify-content: center;
+    align-items: center;
+}
+
+.circle{
+    position: relative;
     width: 400px;
-    display: flex;
-    justify-content: center;
-  }
-  .contact-detail span a {
-    font-size: 20px;
-    padding: 6px 12px;
-    color: #595357;
+    height: 400px;
     border-radius: 50%;
-    margin: 0px 5px;
-  }
-  
-  form.contFrm {
-    max-width: 396px;
-    margin: auto;
-  }
-  
-  .inptFld {
-    width: 100%;
-    height: 50px;
-    border: 0;
-    margin: 0 0 10px;
-    border-radius: 25px;
-    padding: 0 20px;
-    font-size: 16px;
-    color: #595357;
-  }
-  
-  .inptFld:focus {
-    outline-offset: -4px;
-    outline: 1px solid #A6AB98;
-  }
-  
-  .contFrm textarea {
-    height: 75px;
-    padding-top: 5px;
-  }
-  .submit{
-    width: 300px;
-    padding-left: 175px;
     display: flex;
     justify-content: center;
-  }
-
-  .inptBtn {
-    height: 50px;
-    border: 0;
-    background: #595357;
-    font-size: 14px;
-    color: #C9E197;
     align-items: center;
-    margin-right: 50%;
-    letter-spacing: 1px;
-    border-radius: 25px;
-    cursor: pointer;
-    width: 100%;
-    max-width: 200px;
-  }
-  
-  /* Responsive css Start */
-  
-  @media (max-width: 991px) {
-    .sec-pad {
-      padding: 20px 0 0px;
-    }
-  
-    .contact-sec .contact-ul li,
-    .contact-ul b {
-      font-size: 18px;
-    }
-  
-    .contact-sec .contact-ul i {
-      font-size: 14px;
-      padding: 6px;
-      margin-right: 6px;
-    }
-  
-    .inptFld {
-      height: 40px;
-      margin: 0 0 10px;
-      padding: 0 14px;
-      font-size: 14px;
-    }
-  }
-  
-  @media (max-width: 767px) {
-    .contact-detail span {
-      width: auto;
-    }
-    .contact-detail span a {
-      font-size: 18px;
-      padding: 5px 10px;
-      color: #595357;
-      border-radius: 50%;
-      margin: 0px 5px 20px;
-    }
-  }
-  
-  @media (max-width: 575px) {
-    .section-title {
-      font-size: 26px;
-      font-weight: 500;
-    }
+}
 
-    .contact-sec .contact-ul i {
-      border: none;
-    }
-    .inptFld {
-      height: 36px;
-      margin: 0 0 8px;
-      padding: 0 14px;
-      font-size: 14px;
-    }
-  }
-  
-  @media (max-width: 480px) {
-    body{
-      margin-top: 0em;
-      background-image: url(../images/bgmap.png);
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: 100vh;
-      width: 100vw;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-    }
-    .contact-sec .contact-ul li,
-    .contact-ul b {
-      font-size: 16px;
-    }
+.person{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 350px;
+    height: 350px;
+    background: url(../images/Marta.png) ;
+    background-size: cover;
+    border-radius: 50%;
+
+}
+
+
+.nombre{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.nombre span{
+    position: absolute;
+    left: 50%;
+    font-size: 1em;
+    transform-origin: 0 100px;
 }
