--- a/css/index copy.css
+++ b/css/index copy.css
@@ -20,8 +20,6 @@ body{
     background-color: #c9e197;
     background-repeat: no-repeat;
     background-size: cover;
-    /*background-image: linear-gradient(to right top, #c9e197, #c3d797, #bccc98, #b6c298, #afb898, #abab90, #a49e89, #9b9283, #8f8078, #7f706e, #6c6163, #595357);*/
-    /*background-image: linear-gradient(to left top, #C9E197, #C3d797, #BCCC98, #B6C298, #AFB898, #ABAB90, #A49E89, #9B9283, #8F8078, #7F706E, #6C6163, #595357); */
     font-family: 'Monserrat',sans-serif, Arial, Helvetica, sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -88,7 +86,8 @@ header{
     display: block;
     text-decoration: none;
     color: #595357;
-    padding: 1rem;
+    padding: 1.5rem;
+    font-size: 1.5em;
 }
 
 a{  
@@ -147,7 +146,7 @@ a:hover:after{
 
     body{
         margin-top: 0em;
-        background-image: url(../images/bgmap.png);
+        background: #c9e197;
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -217,8 +216,6 @@ a:hover:after{
         height: 100%;
         width: 100%;
         display: block;
-        /*background-image: linear-gradient(to left top, #C9E197, #C3d797, #BCCC98, #B6C298, 
-                            #AFB898, #ABAB90, #A49E89, #9B9283, #8F8078, #7F706E, #6C6163, #595357);*/
         background-color: #A4AC95;
     }
 }
@@ -389,4 +386,25 @@ h4{
     font-weight: bold;
     line-height: 2em;
     text-align: justify;
+}
+
+
+/*Footer*/
+
+.foot-logo {
+    height: 10px !important;
+    width: 10px !important;
+}
+
+
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100px;
+}
+
+footer .foot-logo a:after {
+    content: none !important;
 }
