--- a/css/nostros-circle.css
+++ b/css/nostros-circle.css
@@ -35,9 +35,10 @@ header{
 .logo{
     display: flex;
     justify-content: center;
-    height: 70px;
-    width: 140px;
+    height: 80px;
+    width: 160px;
     padding-left: 80px;
+    padding-top: 1em;
 }
 
 /*Navbar styles*/
@@ -74,7 +75,8 @@ header{
     display: block;
     text-decoration: none;
     color: #595357;
-    padding: 1rem;
+    padding: 1.5rem;
+    font-size: 1.5em;
 }
 
 a{  
