--- a/css/biblioteca.css
+++ b/css/biblioteca.css
@@ -17,10 +17,11 @@ body{
     min-height: 100vh;
     margin: 0;
     padding: 0;
-    background-image: url(../images/bgmap.png);
+    /*background-image: url(../images/bgmap.png);*/ 
+    background-color: #c9e197;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     /*background-image: linear-gradient(to right top, #c9e197, #c3d797, #bccc98, #b6c298, #afb898, #abab90, #a49e89, #9b9283, #8f8078, #7f706e, #6c6163, #595357);*/
     /*background-image: linear-gradient(to left top, #C9E197, #C3d797, #BCCC98, #B6C298, #AFB898, #ABAB90, #A49E89, #9B9283, #8F8078, #7F706E, #6C6163, #595357); */
     font-family: 'Monserrat',sans-serif, Arial, Helvetica, sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
