--- a/css/boblio2.css
+++ b/css/boblio2.css
@@ -17,7 +17,8 @@ body{
     min-height: 100vh;
     margin: 0;
     padding: 0;
-    background-image: url(../images/bgmap.png);
+    /*background-image: url(../images/bgmap.png);*/
+    background-color: #c9e197;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
